examples/type_system/failing/06_runtime_float_string_return.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn compute_rate() -> Float {
    "slow"
}

// Runtime contract violation on typed Float return boundary.
compute_rate()
